mdapipkg/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ChkBoxTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChkBoxTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C Level</fullName>
                </value>
                <value>
                    <fullName>Day to Day</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Recruit - Employee Candidate</fullName>
                </value>
                <value>
                    <fullName>Recruit</fullName>
                </value>
                <value>
                    <fullName>D &amp; B Contact</fullName>
                </value>
                <value>
                    <fullName>Send Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Contact&apos;s Industry</description>
        <inlineHelpText>Industry</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Colleges &amp; Universities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Technology</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Lodging &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Metals &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <description>Siebel Contact Row ID</description>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT) Casablanca, Monrovia</fullName>
                </value>
                <value>
                    <fullName>(GMT) Greenwich Mean Time: Dublin, Edinburgh, Lisban, London</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Brussels, Copenhagen, Madrid, Paris</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Sarajevo, Skopje, Sofija, Vilnius, Warsaw, Zagreb</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) West Central Africa</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Athens, Istanbul, Minsk</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Bucharest</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Cairo</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Harare, Pretoria</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Helsinki, Riga, Tallinn</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Jerusalem</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Baghdad</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Kuwait, Riyadh</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Moscow, St. Petersburg, Volgograd</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Nairobi</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:30) Tehran</fullName>
                </value>
                <value>
                    <fullName>(GMT+04:00) Abu Dhabi, Muscat</fullName>
                </value>
                <value>
                    <fullName>(GMT+04:00) Baku, Tbilisi, Yerevan</fullName>
                </value>
                <value>
                    <fullName>(GMT+04:30) Kabul</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:00) Ekaterinburg</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:00) Islamabad, Karachi, Tashkent</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) Calcutta, Chennai, Mumbai, New Delhi</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Kathmandu</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Almaty, Novosibirsk</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Astana, Dhaka</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Sri Jayawardenepura</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Rengoon</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Bangkok, Hanoi, Jakarta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_A</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>a</value>
        </filters>
        <label>My Contacts - A</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_B</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>b</value>
        </filters>
        <label>My Contacts - B</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_C</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>C</value>
        </filters>
        <label>My Contacts - C</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_D</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>D</value>
        </filters>
        <label>My Contacts - D</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_E</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>E</value>
        </filters>
        <label>My Contacts - E</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_F</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>F</value>
        </filters>
        <label>My Contacts - F</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_G</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>G</value>
        </filters>
        <label>My Contacts - G</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_H</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hartman</value>
        </filters>
        <label>My Contacts - H</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_I</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>I</value>
        </filters>
        <label>My Contacts - I</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_J</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>J</value>
        </filters>
        <label>My Contacts - J</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_K</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>K</value>
        </filters>
        <label>My Contacts - K</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_L</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>L</value>
        </filters>
        <label>My Contacts - L</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>